# Ralph

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  REFACTOR_PLAN.md  check_setup.py  debug.bat  debug_tui.py  main.py  pyproject.toml  ralph.bat  ralph_context.py  ralph_context_mcp.py  ralph_pattern_library.py  ralph_proactive_mcp.py  ralph_smart_context.py  ralph_tree.py  ralph_tui.py  recent.json  requirements.example.md  requirements.txt  setup.bat  start.bat  tree.example.json  tree.slice.example.json
docs/: TERMINAL_EMBEDDING_RESEARCH.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: FolderBrowser.tsx  ProjectCard.tsx  TaskBoard.tsx
frontend/src/pages/: Dashboard.tsx  FactoryFloor.tsx  NewProject.tsx
ralph/: __init__.py  ai_executor.py  api.py  cli.py  context.py  core.py  global_config.py  models.py  ollama_manager.py  self_heal.py  storage.py
ralph/application/: __init__.py  project_service.py  task_service.py  worker_service.py
ralph/domain/: __init__.py  types.py
ralph/domain/project/: __init__.py  events.py  models.py
ralph/domain/shared/: __init__.py  events.py  result.py
ralph/domain/task/: __init__.py  estimation.py  events.py  models.py  traversal.py
ralph/domain/worker/: __init__.py  assignment.py  events.py  models.py
ralph/infrastructure/: __init__.py
ralph/infrastructure/ai/: __init__.py  context_engine.py  ollama.py
ralph/infrastructure/git/: __init__.py  operations.py
ralph/interfaces/: __init__.py
ralph/tui/: __init__.py  app.py
(+29 files in other folders)
