[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph"
version = "2.0.0"
description = "Task management for autonomous AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ralph Team" }
]
keywords = ["ai", "agents", "task-management", "coding"]

dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "typer>=0.9",
    "httpx>=0.25",
    "textual>=0.40",
    "pyte>=0.8",
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
ai = [
    "chromadb>=0.4",
    "ollama>=0.1",
    "sentence-transformers>=2.2",
    "anthropic>=0.30",
]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
]

[project.scripts]
ralph = "ralph.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
